some fix yml files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,6 @@ services:
     ports:
       - '8000:8000'
     environment:
+      - 'ENVIRONMENT = local'
       - 'DJANGO_SECRET_KEY=django-insecure-j6b4o8+tr19981jjdij_qzucyz^st#&fhtp@1!d&sp@(t7m)&t'
       - 'DJANGO_DEBUG=True'
