--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -14,3 +14,6 @@ services:
       - 'ENVIRONMENT = production'
       - 'DJANGO_SECRET_KEY=django-insecure-j6b4o8+tr19981jjdij_qzucyz^st#&fhtp@1!d&sp@(t7m)&t'
       - 'DJANGO_DEBUG=False'
+      - 'EMAIL_HOST_USER=leha.porublev@mail.ru'
+      - 'EMAIL_HOST_PASSWORD=rPMfb0p8AhBmFNqVJkt6'
+      - 'DEFAULT_FROM_EMAIL=leha.porublev@mail.ru'
